objects/ssot__ClaimSupportingInformation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Supporting Information Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InformationCategoryCodeId__c</fullName>
        <label>Information Category Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InformationCodeId__c</fullName>
        <label>InformationCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InformationIdentifier__c</fullName>
        <label>Information Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonType__c</fullName>
        <label>Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128258554_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimSupportingInformation_ClaimId_m_rel</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimSupportingInformation_ClaimId_m_rel</relationshipLabel>
        <relationshipName>rel_1723128258554_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128322273_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimSupportingInformation_Informati_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ClaimSupportingInformation_Informati_rel</relationshipLabel>
        <relationshipName>rel_1723128322273_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128325446_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimSupportingInformation_Informati_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ClaimSupportingInformation_Informati_rel</relationshipLabel>
        <relationshipName>rel_1723128325446_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>